Fix layout issues

--- a/src/pages/Feed/SinglePost/SinglePost.css
+++ b/src/pages/Feed/SinglePost/SinglePost.css
@@ -1,6 +1,6 @@
 .single-post {
   width: 90%;
-  margin: 1.5rem auto;
+  margin: 5rem auto;
   text-align: left;
 }
 
